# TimeTracker

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  time_tracker.py
.github/workflows/: tests.yml
apps/: streamlit_app.py
artifacts/: timetracker.db
scripts/: contract_test.py  work_entry_test.py
src/timetracker/: cli.py  contract_handler.py  security.py  summary.py  work_entry_handler.py
src/timetracker/config/: paths.py
src/timetracker/database/: migrate_json_to_sqlite.py  schema.py
src/timetracker/reports/: monthly_report.py
src/timetracker/storage/: json_storage.py  sqlite_storage.py  user_storage.py
src/timetracker/ui/: auth_view.py  contract_view.py  dashboard_view.py  work_entry_view.py
src/timetracker/utils/: logger.py  time_utils.py
tests/: test_cli.py  test_contract_handler.py  test_json_storage.py  test_logger.py  test_logging.py  test_summary.py  test_time_tracker.py  test_time_utils.py  test_work_entry_handler.py
