[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "timetracker"
version = "0.1.0"
description = "A basic time tracking tool."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pandas",
    "typer",
    "streamlit",
    "streamlit-calendar",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[project.scripts]
timetracker = "timetracker.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "--cov=timetracker --cov-report=term-missing --cov-fail-under=50"
testpaths = ["tests"]